--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
 
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li data-page="testtwo">Test Two</li>
+		        <li><a data-page="testtwo">Test Two</a></li>
 		        <li><a href="#">Link</a></li>
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right">
