--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,6 @@
 	<head>
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/page.js"></script>
 
 		<link href="css/bootswatch.min.css" rel="stylesheet" type="text/css"></link>
 		<link href="css/style.css" rel="stylesheet" type="text/css"></link>
@@ -33,11 +32,13 @@
 		    </div>
 		  </div>
 		</nav>
-		<div class="page" id="testone">
-			<h1>test 1</h1>
+		<div class="article" id="article-left">
+
 		</div>
-		<div class="page" id="testtwo">
-			<h1>test 2</h1>
+		<div class="article" id="article-right">
+			<h3>We Might Just Win!</h3>
+			<h4>by c22bg</h4>
+			<p>This war has been one long fight, and a recent breakthrough on how the trojans will be defeated. &quot;Since the death of our seemingly immortal warrior Achilles, we have been losing the rapidly, and it was clear we needed to switch our strategy.&quot; Said one of the collaborators on this sudden change, Cassius Nikitas. &quot;Posters of our new project, the trojan horse, have been placed everywhere in Greece.&quot; Though it may seem ridiculous, the plan that has been approved by the king, is to seemingly forfeit the war, and leave a wooden horse sculpture with soldiers in it, and when night came, destroy all of Troy. One of the main concerns is that word will spread to Troy. Bakko Petras, one of the few warriors in the horse itself, has helped to insure the coast is completely closed off from Trojan Merchants. &quot;It&#39;s a hard feat to get the world around to enough average people looking for work, without it getting to the wrong person.&quot; was one of quotes from Bakko's recent lecture. It is a huge risk, as Bakko has expressed, &quot;Greece is putting its thirty best soldiers on a suicide mission to open a gate. And if the Trojans discover us, than the war is lost.&quot; For those who are wondering when this goliath horse will be done, it will probably be finished before the week is up, if work continues at this rate. Many have expressed that it may not be a good idea to use this &quot;trick&quot; in this war, as we will have no defence for the next war. Both Cassius and Bakko believe that this is either a hit or miss, and if the horse successfully gets inside the gate, there will not be any survivors to tell of our new strategy, leaving us free to use it again. This is Sotiris Galio, hoping for just as much good news as you are.</p>
 		</div>
 	</body>
 </html>
