--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<h1 id="title">The Olive Wreath - Greek Newspaper</h1>
+		<h2 id="title">15000 Drachmas</h2>
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
 		    <div class="navbar-header">
@@ -23,11 +24,7 @@
 
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li class="link"><a href="#">Test Two</a></li>
-		        <li><a href="#">Link</a></li>
-		      </ul>
-		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="#">Link</a></li>
+		        <li class="link"><a href="#">Ads</a></li>
 		      </ul>
 		    </div>
 		  </div>
@@ -36,7 +33,7 @@
 			<div class="article" id="article-left">
 				<h3>Interview with Athena</h3>
 				<h4>by c22am</h4>
-				<br>The Olive Wreath decided to interview a Trojan corpse about the current events of the Trojan war. As it turns out, the interview didn&#39;t end too well… Instead, The Olive Wreath interviewed the goddess Athena for her personal opinion about Helen of Troy and the war!
+				<br>The Olive Wreath decided to interview a Trojan corpse about the current events of the Trojan war. As it turns out, the interview didn&#39;t end too well... Instead, The Olive Wreath interviewed the goddess Athena for her personal opinion about Helen of Troy and the war!
 				The Olive Wreath: Hello, Athena. We are The Olive Wreath Newspaper of Greece. We know you are very short on time and have many other things to do, but we have a few questions for you about your take on the Trojan War.
 				<br>Silence
 				<br>Athena (finally): Very well then, I am Athena, Goddess of war. What can I do for you?
@@ -49,7 +46,7 @@
 				<br>TOW: Why?
 				Athena: Aphrodite because she promised paris helen without remembering one bit that she had a husband already! Paris because he went and took Helen, that&#39;s why! if that isn&#39;t a simple enough explanation for you, how would you like if it someone came and took your wife?
 				<br>TOW: Very true. Athena, do you have anything to say about the new Helen of Troy?
-				Athena: Just one word. Disgusting. Helen was meant to be a Greek, and should still be that now, If it wasn&#39;t for that Paris…
+				Athena: Just one word. Disgusting. Helen was meant to be a Greek, and should still be that now, If it wasn&#39;t for that Paris...
 				<br>TOW: Thank you! It was a pleasure talking.
 				<br>Athena: You too.
 			</div>
@@ -95,5 +92,36 @@
 				</td>
 			</tr>
 		</table>
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+    <li data-target="#myCarousel" data-slide-to="4"></li>
+    <li data-target="#myCarousel" data-slide-to="5"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="images/glasses-1.jpg" alt="Cyclops Glasses">
+    </div>
+    <div class="item">
+      <img src="images/glasses-2.jpg" alt="Cyclops Glasses">
+    </div>
+
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 	</body>
 </html>
