--- a/index.htm
+++ b/index.htm
@@ -111,16 +111,29 @@
     <div class="item">
       <img src="images/glasses-2.jpg" alt="Cyclops Glasses">
     </div>
+     <div class="item">
+      <img src="images/glasses-2.jpg" alt="Cyclops Glasses">
+    </div>
+     <div class="item">
+      <img src="images/glasses-3.jpg" alt="Cyclops Glasses">
+    </div>
+    <div class="item">
+      <img src="images/glasses-4.jpg" alt="Cyclops Glasses">
+    </div>
+    <div class="item">
+      <img src="images/glasses-5.jpg" alt="Cyclops Glasses">
+    </div>
+    <div class="item">
+      <img src="images/glasses-6.jpg" alt="Cyclops Glasses">
+    </div>
 
 
   <!-- Left and right controls -->
   <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+    <span>Previous</span>
   </a>
   <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
+    <span>Next</span>
   </a>
 </div>
 	</body>
