--- a/index.htm
+++ b/index.htm
@@ -1,137 +1,137 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<script type="text/javascript" src="js/jquery.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>
-
-		<link href="css/bootswatch.min.css" rel="stylesheet" type="text/css"></link>
-		<link href="css/style.css" rel="stylesheet" type="text/css"></link>
-	</head>
-	<body>
-		<h1 id="title">The Olive Wreath - Greek Newspaper</h1>
-		<h2 id="title">15000 Drachmas</h2>
-		<nav class="navbar navbar-default">
-		  <div class="container-fluid">
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		      </button>
-		      <a class="navbar-brand" href="#">The Olive Wreath</a>
-		    </div>
-
-		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		      <ul class="nav navbar-nav">
-		        <li class="link"><a href="#">Ads</a></li>
-		      </ul>
-		    </div>
-		  </div>
-		</nav>
-		<div class="clear">
-			<div class="article" id="article-left">
-				<h3>Interview with Athena</h3>
-				<h4>by c22am</h4>
-				<br>The Olive Wreath decided to interview a Trojan corpse about the current events of the Trojan war. As it turns out, the interview didn&#39;t end too well... Instead, The Olive Wreath interviewed the goddess Athena for her personal opinion about Helen of Troy and the war!
-				The Olive Wreath: Hello, Athena. We are The Olive Wreath Newspaper of Greece. We know you are very short on time and have many other things to do, but we have a few questions for you about your take on the Trojan War.
-				<br>Silence
-				<br>Athena (finally): Very well then, I am Athena, Goddess of war. What can I do for you?
-				<br>TOW: As we said earlier, We would like to know your opinion on some questions about the war. First, who do you side with?
-				Athena: Most certainly the Greeks! Who would side with the Trojans, being the rascals they are?
-				<br>TOW: Did you fight in the war before?
-				Athena: Well, yes, until Zeus came to stop us. I was fighting for the Greeks-of course-Because the Greeks deserve to win.
-				<br>TOW: Who do you think is to blame for the loss of Menelaus&#39;s wife?
-				Athena: Aphrodite and Paris.
-				<br>TOW: Why?
-				Athena: Aphrodite because she promised paris helen without remembering one bit that she had a husband already! Paris because he went and took Helen, that&#39;s why! if that isn&#39;t a simple enough explanation for you, how would you like if it someone came and took your wife?
-				<br>TOW: Very true. Athena, do you have anything to say about the new Helen of Troy?
-				Athena: Just one word. Disgusting. Helen was meant to be a Greek, and should still be that now, If it wasn&#39;t for that Paris...
-				<br>TOW: Thank you! It was a pleasure talking.
-				<br>Athena: You too.
-			</div>
-			<div class="article" id="article-right">
-				<h3>We Might Just Win!</h3>
-				<h4>by c22bg</h4>
-				<p>This war has been one long fight, and a recent breakthrough on how the trojans will be defeated. &quot;Since the death of our seemingly immortal warrior Achilles, we have been losing the rapidly, and it was clear we needed to switch our strategy.&quot; Said one of the collaborators on this sudden change, Cassius Nikitas. &quot;Posters of our new project, the trojan horse, have been placed everywhere in Greece.&quot; Though it may seem ridiculous, the plan that has been approved by the king, is to seemingly forfeit the war, and leave a wooden horse sculpture with soldiers in it, and when night came, destroy all of Troy. One of the main concerns is that word will spread to Troy. Bakko Petras, one of the few warriors in the horse itself, has helped to insure the coast is completely closed off from Trojan Merchants. &quot;It&#39;s a hard feat to get the world around to enough average people looking for work, without it getting to the wrong person.&quot; was one of quotes from Bakko's recent lecture. It is a huge risk, as Bakko has expressed, &quot;Greece is putting its thirty best soldiers on a suicide mission to open a gate. And if the Trojans discover us, than the war is lost.&quot; For those who are wondering when this goliath horse will be done, it will probably be finished before the week is up, if work continues at this rate. Many have expressed that it may not be a good idea to use this &quot;trick&quot; in this war, as we will have no defence for the next war. Both Cassius and Bakko believe that this is either a hit or miss, and if the horse successfully gets inside the gate, there will not be any survivors to tell of our new strategy, leaving us free to use it again. This is Sotiris Galio, hoping for just as much good news as you are.</p>
-			</div>
-		</div>
-		<table id="stock-market" class="clear" border="1">
-			<tr>
-				<td id="stock-market-header" colspan="2">
-					Welcome to the Greek Stock Market!
-				</td>
-			</tr>
-			<tr>
-				<td>
-					Olive Oil
-				</td>
-				<td>
-					/\ 10503 Drachmas (since this morning)
-				</td>
-			</tr>
-			<tr>
-				<td>
-					Murex Shell
-				</td>
-				<td>
-					/\ 33502 Drachmas (since this morning)
-				</td>
-			</tr>
-			<tr>
-				<td>
-					Silver
-				</td>
-				<td>
-					\/ 193 Drachmas (since this morning)
-				</td>
-			</tr>
-			<tr>
-				<td class="ad" colspan="2">
-					(Advertisement)
-				</td>
-			</tr>
-		</table>
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
-		<!-- Indicators -->
-		<ol class="carousel-indicators">
-		    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-		    <li data-target="#myCarousel" data-slide-to="1"></li>
-		    <li data-target="#myCarousel" data-slide-to="2"></li>
-		    <li data-target="#myCarousel" data-slide-to="3"></li>
-		    <li data-target="#myCarousel" data-slide-to="4"></li>
-		    <li data-target="#myCarousel" data-slide-to="5"></li>
-		</ol>
-		<!-- Wrapper for slides -->
-		<div class="carousel-inner" role="listbox">
-		    <div class="item active">
-		        <img src="images/glasses-1.jpg" alt="Cyclops Glasses">
-		    </div>
-		    <div class="item">
-		        <img src="images/glasses-2.jpg" alt="Cyclops Glasses">
-		    </div>
-		    <div class="item">
-		        <img src="images/glasses-2.jpg" alt="Cyclops Glasses">
-		    </div>
-		    <div class="item">
-		        <img src="images/glasses-3.jpg" alt="Cyclops Glasses">
-		    </div>
-		    <div class="item">
-		        <img src="images/glasses-4.jpg" alt="Cyclops Glasses">
-		    </div>
-		    <div class="item">
-		        <img src="images/glasses-5.jpg" alt="Cyclops Glasses">
-		    </div>
-		    <div class="item">
-		        <img src="images/glasses-6.jpg" alt="Cyclops Glasses">
-		    </div>
-		    <!-- Left and right controls -->
-		    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-		    <span>Previous</span>
-		    </a>
-		    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-		    <span>Next</span>
-		    </a>
-		</div>
-	</body>
+    <head>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <link href="css/bootswatch.min.css" rel="stylesheet" type="text/css">
+        </link>
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+        </link>
+    </head>
+    <body>
+        <h1 id="title">The Olive Wreath - Greek Newspaper</h1>
+        <h2 id="title">15000 Drachmas</h2>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">The Olive Wreath</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="link"><a href="#">Ads</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="clear">
+            <div class="article" id="article-left">
+                <h3>Interview with Athena</h3>
+                <h4>by c22am</h4>
+                <br>The Olive Wreath decided to interview a Trojan corpse about the current events of the Trojan war. As it turns out, the interview didn&#39;t end too well... Instead, The Olive Wreath interviewed the goddess Athena for her personal opinion about Helen of Troy and the war!
+                The Olive Wreath: Hello, Athena. We are The Olive Wreath Newspaper of Greece. We know you are very short on time and have many other things to do, but we have a few questions for you about your take on the Trojan War.
+                <br>Silence
+                <br>Athena (finally): Very well then, I am Athena, Goddess of war. What can I do for you?
+                <br>TOW: As we said earlier, We would like to know your opinion on some questions about the war. First, who do you side with?
+                Athena: Most certainly the Greeks! Who would side with the Trojans, being the rascals they are?
+                <br>TOW: Did you fight in the war before?
+                Athena: Well, yes, until Zeus came to stop us. I was fighting for the Greeks-of course-Because the Greeks deserve to win.
+                <br>TOW: Who do you think is to blame for the loss of Menelaus&#39;s wife?
+                Athena: Aphrodite and Paris.
+                <br>TOW: Why?
+                Athena: Aphrodite because she promised paris helen without remembering one bit that she had a husband already! Paris because he went and took Helen, that&#39;s why! if that isn&#39;t a simple enough explanation for you, how would you like if it someone came and took your wife?
+                <br>TOW: Very true. Athena, do you have anything to say about the new Helen of Troy?
+                Athena: Just one word. Disgusting. Helen was meant to be a Greek, and should still be that now, If it wasn&#39;t for that Paris...
+                <br>TOW: Thank you! It was a pleasure talking.
+                <br>Athena: You too.
+            </div>
+            <div class="article" id="article-right">
+                <h3>We Might Just Win!</h3>
+                <h4>by c22bg</h4>
+                <p>This war has been one long fight, and a recent breakthrough on how the trojans will be defeated. &quot;Since the death of our seemingly immortal warrior Achilles, we have been losing the rapidly, and it was clear we needed to switch our strategy.&quot; Said one of the collaborators on this sudden change, Cassius Nikitas. &quot;Posters of our new project, the trojan horse, have been placed everywhere in Greece.&quot; Though it may seem ridiculous, the plan that has been approved by the king, is to seemingly forfeit the war, and leave a wooden horse sculpture with soldiers in it, and when night came, destroy all of Troy. One of the main concerns is that word will spread to Troy. Bakko Petras, one of the few warriors in the horse itself, has helped to insure the coast is completely closed off from Trojan Merchants. &quot;It&#39;s a hard feat to get the world around to enough average people looking for work, without it getting to the wrong person.&quot; was one of quotes from Bakko's recent lecture. It is a huge risk, as Bakko has expressed, &quot;Greece is putting its thirty best soldiers on a suicide mission to open a gate. And if the Trojans discover us, than the war is lost.&quot; For those who are wondering when this goliath horse will be done, it will probably be finished before the week is up, if work continues at this rate. Many have expressed that it may not be a good idea to use this &quot;trick&quot; in this war, as we will have no defence for the next war. Both Cassius and Bakko believe that this is either a hit or miss, and if the horse successfully gets inside the gate, there will not be any survivors to tell of our new strategy, leaving us free to use it again. This is Sotiris Galio, hoping for just as much good news as you are.</p>
+            </div>
+        </div>
+        <table id="stock-market" class="clear" border="1">
+            <tr>
+                <td id="stock-market-header" colspan="2">
+                    Welcome to the Greek Stock Market!
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Olive Oil
+                </td>
+                <td>
+                    /\ 10503 Drachmas (since this morning)
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Murex Shell
+                </td>
+                <td>
+                    /\ 33502 Drachmas (since this morning)
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Silver
+                </td>
+                <td>
+                    \/ 193 Drachmas (since this morning)
+                </td>
+            </tr>
+            <tr>
+                <td class="ad" colspan="2">
+                    (Advertisement)
+                </td>
+            </tr>
+        </table>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+            <li data-target="#myCarousel" data-slide-to="5"></li>
+        </ol>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="images/glasses-1.jpg" alt="Cyclops Glasses">
+            </div>
+            <div class="item">
+                <img src="images/glasses-2.jpg" alt="Cyclops Glasses">
+            </div>
+            <div class="item">
+                <img src="images/glasses-2.jpg" alt="Cyclops Glasses">
+            </div>
+            <div class="item">
+                <img src="images/glasses-3.jpg" alt="Cyclops Glasses">
+            </div>
+            <div class="item">
+                <img src="images/glasses-4.jpg" alt="Cyclops Glasses">
+            </div>
+            <div class="item">
+                <img src="images/glasses-5.jpg" alt="Cyclops Glasses">
+            </div>
+            <div class="item">
+                <img src="images/glasses-6.jpg" alt="Cyclops Glasses">
+            </div>
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span>Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span>Next</span>
+            </a>
+        </div>
+    </body>
 </html>
