--- a/ads.htm
+++ b/ads.htm
@@ -96,12 +96,23 @@
                     </div>
                     <!-- Left and right controls -->
                     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                    <span>Previous</span>
+                    <span>&laquo;</span>
                     </a>
                     <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                    <span>Next</span>
+                    <span>&raquo;</span>
                     </a>
                 </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h4>
+                  Get Fresh-picked Greek Olives!
+                </h4>
+                <img src="images/olives.jpg" />
+                <h5>
+                  These fresh-picked olives come directly from The Olive Wreath Newspaper's olive wreath! (How crazy is that!?!?) Get yours today for 30,000 Drachma.. Visit us at 112 Zeus Avenue today!
+                </h5>
               </td>
             </tr>
           </tbody>
