--- a/ads.htm
+++ b/ads.htm
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.htm">The Olive Wreath</a>
+                    <li class="link"><a class="navbar-brand" href="index.htm">The Olive Wreath</a></li>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
