--- a/index.htm
+++ b/index.htm
@@ -33,8 +33,8 @@
             <div class="article" id="article-left">
                 <h3>Interview with Athena</h3>
                 <h4>by c22am</h4>
-                <br>The Olive Wreath decided to interview a Trojan corpse about the current events of the Trojan war. As it turns out, the interview didn&#39;t end too well... Instead, The Olive Wreath interviewed the goddess Athena for her personal opinion about Helen of Troy and the war!
-                The Olive Wreath: Hello, Athena. We are The Olive Wreath Newspaper of Greece. We know you are very short on time and have many other things to do, but we have a few questions for you about your take on the Trojan War.
+                The Olive Wreath decided to interview a Trojan corpse about the current events of the Trojan war. As it turns out, the interview didn&#39;t end too well... Instead, The Olive Wreath interviewed the goddess Athena for her personal opinion about Helen of Troy and the war!
+                <br>The Olive Wreath: Hello, Athena. We are The Olive Wreath Newspaper of Greece. We know you are very short on time and have many other things to do, but we have a few questions for you about your take on the Trojan War.
                 <br>Silence
                 <br>Athena (finally): Very well then, I am Athena, Goddess of war. What can I do for you?
                 <br>TOW: As we said earlier, We would like to know your opinion on some questions about the war. First, who do you side with?
