--- a/index.htm
+++ b/index.htm
@@ -3,10 +3,9 @@
     <head>
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <link href="css/bootswatch.min.css" rel="stylesheet" type="text/css">
-        </link>
-        <link href="css/style.css" rel="stylesheet" type="text/css">
-        </link>
+        <link href="css/bootswatch.min.css" rel="stylesheet" type="text/css"></link>
+        <link href="css/style.css" rel="stylesheet" type="text/css"></link>
+        <link rel="apple-touch-icon" href="images/olive-wreath.jpg"/>
     </head>
     <body>
         <h1 id="title">The Olive Wreath - Greek Newspaper</h1>
