--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>The Olive Wreath</title>
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <link href="css/bootswatch.min.css" rel="stylesheet" type="text/css"></link>
